[#278] 초기 데이터 비움

--- a/Cardna-iOS/Cardna-iOS/Source/AppSources/AppXibs/ProfileCollectionViewCell.xib
+++ b/Cardna-iOS/Cardna-iOS/Source/AppSources/AppXibs/ProfileCollectionViewCell.xib
@@ -19,15 +19,15 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ClJ-mj-EPx">
                         <rect key="frame" x="0.0" y="0.0" width="214" height="265"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icbtBoxbackPurple" translatesAutoresizingMaskIntoConstraints="NO" id="HYq-fJ-jdE">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HYq-fJ-jdE">
                                 <rect key="frame" x="68" y="24" width="78" height="78"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="78" id="6C9-Pz-7vu"/>
                                     <constraint firstAttribute="width" constant="78" id="Mxi-ED-q0M"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="혜원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UME-7s-sxP">
-                                <rect key="frame" x="92.5" y="118" width="29.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="      " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UME-7s-sxP">
+                                <rect key="frame" x="94" y="118" width="26.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="V3B-m3-fpm"/>
                                 </constraints>
@@ -35,8 +35,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="“딩가딩가딩”" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puD-du-jxe">
-                                <rect key="frame" x="63" y="143" width="88.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puD-du-jxe">
+                                <rect key="frame" x="98.5" y="143" width="17.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="obt-8a-ky0"/>
                                 </constraints>
@@ -74,7 +74,4 @@
             <point key="canvasLocation" x="256.52173913043481" y="167.74553571428569"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="icbtBoxbackPurple" width="44" height="44"/>
-    </resources>
 </document>
